# python-pdf-worker

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
config/: logging.yml
src/pdf_worker/: __main__.py  cli.py  compressor.py  logging_config.py  merger.py
tests/: conftest.py  test_cli.py  test_compressor.py  test_logging_config.py  test_merger.py
